# hypo

./: .gitignore  .travis.yml  LICENSE  README.md  hypo.cabal  stack.yaml
app/: Main.hs
launchd/: com.fullyforged.hypo.plist
src/: Lib.hs  Schema.hs  Static.hs  Store.hs
test/: Spec.hs
