name:                hypo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cloud8421/hypo#readme
license:             BSD3
license-file:        LICENSE
author:              Claudio Ortolina
maintainer:          claudio@fullyforged.com
copyright:           Fully Forged 2017
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , wai-logger
                     , warp
  default-language:    Haskell2010

executable hypo-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hypo
  default-language:    Haskell2010

test-suite hypo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hypo
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cloud8421/hypo
